2004-03-23  Marcus Brinkmann  <marcus@gnu.org>

	* ia32/Makefile.am (nobase_include_HEADERS): Fix typo that
	prevented l4/bits/gnu/space.h from being installed.  Reported by
	Daniel Wagner.

2004-03-22  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (l4_send_timeout): Call _L4_send_timeout.
	* l4/gnu/schedule.h (l4_is_time_longer): Call _L4_is_time_longer.
	(l4_is_time_shorter): Call _L4_is_time_shorter.
	(l4_is_time_equal): Call _L4_is_time_equal.
	(l4_is_time_not_equal): Call _L4_is_time_not_equal.
	* l4/gnu/kip.h (l4_num_processors_desc_from): Rename to ...
	(l4_num_processors_from): ... this.  Fix implementation.
	(l4_num_processors_desc): Rename to ...
	(l4_num_processors): ... this.  Fix implementation.

2004-03-21  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/schedule.h (l4_SystemClock): Rename to ...
	(l4_system_clock): ... this.

	* ia32/l4/bits/gnu/space.h (l4_io_fpage, l4_io_fpage_log2,
	l4_small_space): Convert to wrapper function.

2004-03-19  Marcus Brinkmann  <marcus@gnu.org>

	* l4/gnu/ipc.h (L4_string_items_acceptor): Rename to ...
	(L4_STRING_ITEMS_ACCEPTOR): ... this.
	(L4_untyped_words_acceptor): Rename to ...
	(L4_UNTYPED_WORDS_ACCEPTOR): ... this.

	* ia32/l4/bits/vregs.h (_L4_utcb): Make the assembler volatile.

2004-03-17  Marcus Brinkmann  <marcus@gnu.org>

	* l4/schedule.h (_L4_TIME_M_BITS, _L4_TIME_PERIOD_E_BITS,
	_L4_TIME_PERIOD_E_MAX): New macros.
	(_L4_time_period): Use them.
	(_L4_zero_time): Use them.
	* l4/gnu/schedule.h (L4_TIME_PERIOD_MAX): Define macro.
	(l4_time_mul2): New function.

	* l4/thread.h (_L4_start, _L4_start_sp_ip, _L4_start_sp_ip_flags):
	Add _L4_XCHG_REGS_CANCEL_IPC to control flags, to match L4 CVS.
	* l4/compat/space.h (L4_UnmapFpage): Change the return type to
	L4_Fpage_t and return the fpage to match L4 CVS.
	(L4_Flush): Likewise.
	* l4/syscall.h (_L4_ERR_INV_SPACE, _L4_ERR_INV_SCHEDULER,
	_L4_ERR_INV_PARAM, _L4_ERR_UTCB_AREA, _L4_ERR_KIP_AREA,
	_L4_ERR_NO_MEM): Decrement by one to match the L4 CVS.
